# Renderer

./: .gitignore  CMakeLists.txt
src/: Matrix2.hh  Point2.cc  Point2.hh  Renderer.cc  Renderer.hh  Vector2.cc  Vector2.hh  WindowsHandler.hh  geometry2.hh  main.cc  windows.hh
src/exe/: main.cc
src/lib/: BarycentricPoint.hh  Camera.hh  Controller.cc  Controller.hh  FPController.hh  FasterBMP.hh  Light.hh  Material.hh  Matrix2.hh  Matrix3.cc  Matrix3.hh  Model.cc  Model.hh  Point2.cc  Point2.hh  Point3.cc  Point3.hh  Renderer.cc  Renderer.hh  TexturePoint.hh  TexturedMaterial.cc  TexturedMaterial.hh  Triangle.hh  Vector2.cc  Vector2.hh  Vector3.cc  Vector3.hh  Vertex.hh  VertexColor.hh  WindowsHandler.cc  WindowsHandler.hh  geometry3.hh  windows.hh
src/parser/: Parser.cc  Parser.hh  obj.cc  obj.hh  obj.l  obj.y
src/test/: main.cc
